--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "node": ">14.0.0"
   },
   "dependencies": {
+    "@patternfly/pfe-accordion": "^1.12.3",
     "@patternfly/pfe-cta": "^1.12.3",
     "@patternfly/pfe-datetime": "^1.12.3",
     "@patternfly/pfe-progress-indicator": "^1.12.3",
     "@patternfly/pfe-styles": "^1.12.3",
     "@rushstack/eslint-patch": "^1.1.3",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@webcomponents/webcomponentsjs": "^2.7.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -46,7 +48,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "jest": "^27.4.3",
     "prettier": "^2.6.2",
-    "spandx": "^2.2.5",
+    "spandx": "^2.1.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
