--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "node": ">14.0.0"
   },
   "dependencies": {
+    "@carbon/web-components": "^1.28.0",
     "@patternfly/elements": "^2.1.0",
     "@patternfly/pfe-card": "^1.12.3",
     "@patternfly/pfe-cta": "^1.12.3",
     "@patternfly/pfe-datetime": "^1.12.3",
     "@patternfly/pfe-progress-indicator": "^1.12.3",
     "@patternfly/pfe-styles": "^1.12.3",
+    "@patternfly/pfe-tabs": "^1.12.3",
     "@rushstack/eslint-patch": "^1.1.3",
     "@vue/eslint-config-typescript": "^10.0.0",
     "vue": "^3.2.25",
