--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/preset-typescript": "^7.21.5",
     "@cypress/vite-dev-server": "^1.2.5",
     "@cypress/vue": "^3.0.1",
-    "@spaship/cli": "^0.14.0",
+    "@spaship/cli": "^1.5.6",
     "@types/jest": "^29.5.1",
     "@types/node": "^17.0.28",
     "@types/node-fetch": "^2.6.1",
@@ -48,7 +48,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "jest": "^29.5.0",
     "prettier": "^2.6.2",
-    "spandx": "^2.2.5",
+    "spandx": "2.2.5",
     "ts-jest": "^29.1.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
