--- a/package.json
+++ b/package.json
@@ -19,43 +19,43 @@
     "node": ">14.0.0"
   },
   "dependencies": {
-    "@patternfly/elements": "^2.1.0",
+    "@patternfly/elements": "^2.3.2",
     "@patternfly/pfe-card": "^1.12.3",
     "@patternfly/pfe-cta": "^1.12.3",
     "@patternfly/pfe-progress-indicator": "^1.12.3",
     "@patternfly/pfe-styles": "^1.12.3",
     "@patternfly/pfe-tabs": "^1.12.3",
-    "@rushstack/eslint-patch": "^1.1.3",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "vue": "^3.2.25",
-    "vue-router": "^4.2.2"
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.5",
-    "@cypress/vite-dev-server": "^1.2.5",
-    "@cypress/vue": "^3.0.1",
-    "@spaship/cli": "^1.5.6",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^17.0.28",
-    "@types/node-fetch": "^2.6.1",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "cypress": "^9.7.0",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vuejs-accessibility": "^1.1.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.6.2",
+    "@babel/preset-typescript": "^7.22.5",
+    "@cypress/vite-dev-server": "^5.0.5",
+    "@cypress/vue": "^5.0.5",
+    "@spaship/cli": "^1.5.7",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "@types/node-fetch": "^2.6.4",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.1",
+    "cypress": "^12.17.2",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-vuejs-accessibility": "^2.1.0",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
     "spandx": "2.2.5",
-    "ts-jest": "^29.1.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.5",
     "vite-plugin-html": "^3.2.0",
     "vite-test": "^0.4.0",
-    "vite-tsconfig-paths": "^3.4.1",
-    "vue-tsc": "^0.34.7"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vue-tsc": "^1.8.5"
   },
   "eslintConfig": {
     "root": true,
